Footer spacing fix

--- a/style.css
+++ b/style.css
@@ -324,9 +324,10 @@ footer {
   flex-wrap: wrap;
 }
 
-footer {
-  text-align: center;
-  padding: 2rem;
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
 }
 
 .footer-phone {
@@ -334,6 +335,9 @@ footer {
   margin-right: 50px;
   color: white;
   font-weight: bold;
+  align-items: right;
+  text-align: right;
+  justify-self: right;
 }
 
 .footer-phone:hover {
@@ -353,6 +357,8 @@ footer {
   color: white;
   margin-left: 50px;
   font-weight: bold;
+  text-align: left;
+  justify-self: left;
 }
 
 .footer-button {
